--- a/MissCountOnResults/MissCountOnResults.csproj
+++ b/MissCountOnResults/MissCountOnResults.csproj
@@ -141,7 +141,7 @@
     <None Include="Directory.Build.props" Condition="Exists('Directory.Build.props')" />
     <None Include="Directory.Build.targets" Condition="Exists('Directory.Build.targets')" />
     <None Include="MissCountOnResults.csproj.user" Condition="Exists('MissCountOnResults.csproj.user')" />
-    <None Include="Settings.bsml" />
+    <EmbeddedResource Include="Settings.bsml" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="BeatSaberModdingTools.Tasks">
