--- a/MissCountOnResults/manifest.json
+++ b/MissCountOnResults/manifest.json
@@ -3,11 +3,12 @@
   "id": "MissCountOnResults",
   "name": "MissCountOnResults",
   "author": "Rakkyo150",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "",
-  "gameVersion": "1.20.0",
+  "gameVersion": "1.31.0",
   "dependsOn": {
-    "BSIPA": "^4.0.5"
+    "BSIPA": "^4.0.5",
+    "BeatSaberMarkupLanguage": "^1.7.0"
   },
   "features": []
 }
